--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manimo - Animation YouTuber</title>
+  <title>About Me - Manimo</title>
   <style>
     body {
       --background-color: #111;
@@ -41,59 +41,29 @@
       text-decoration: none;
     }
 
-    .most-popular-button {
-      display: block;
-      text-align: center;
+    .person {
+      display: flex;
+      align-items: center;
       margin-top: 40px;
     }
 
-    .most-popular-button a {
-      display: inline-block;
-      width: 150px;
-      height: 50px;
-      border-radius: 10px;
-      border: 1px solid #03045e;
-      position: relative;
-      overflow: hidden;
-      transition: all 0.5s ease-in;
-      z-index: 1;
-      background-color: #F2CD5C;
-      color: var(--text-color);
-      text-decoration: none;
-      font-size: 18px;
+    .person img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      margin-right: 20px;
     }
 
-    .most-popular-button a::before,
-    .most-popular-button a::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      width: 0;
-      height: 100%;
-      transform: skew(15deg);
-      transition: all 0.5s;
-      overflow: hidden;
-      z-index: -1;
+    .person-description {
+      flex-grow: 1;
     }
 
-    .most-popular-button a::before {
-      left: -10px;
-      background: #F2CD5C;
+    .person-description h2 {
+      margin: 0;
     }
 
-    .most-popular-button a::after {
-      right: -10px;
-      background: #F2921D;
-    }
-
-    .most-popular-button a:hover::before,
-    .most-popular-button a:hover::after {
-      width: 58%;
-    }
-
-    .most-popular-button a:hover {
-      color: #e3e3e3;
-      transition: 0.3s;
+    .person-description p {
+      margin-top: 10px;
     }
 
     .switch {
@@ -149,19 +119,43 @@
 </head>
 <body>
   <div class="container">
-    <h1>Manimo</h1>
+    <h1>About Me</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="contacts.html">Contacts</a>
+    </nav>
+    <div class="person">
+      <img src="manimo.jpg" alt="Person 1">
+      <div class="person-description">
+        <h2>Manimo</h2>
+        <p>Owner of the channel, does animation and music.</p>
+      </div>
+    </div>
+    <div class="person">
+      <img src="alex.jpg" alt="Person 2">
+      <div class="person-description">
+        <h2>Alex</h2>
+        <p>Co-Owner of the channel, does most of the art.</p>
+      </div>
+    </div>
+    <div class="person">
+      <img src="mythic.jpg" alt="Person 3">
+      <div class="person-description">
+        <h2>Mythic</h2>
+        <p>nothing (fnf)</p>
+      </div>
+    </div>
+    <div class="person">
+      <img src="pepsi.jpg" alt="Person 4">
+      <div class="person-description">
+        <h2>Max</h2>
+        <p>Emotional support, FNF shit</p>
+      </div>
+    </div>
     <label class="switch">
       <input type="checkbox">
       <span class="slider"></span>
     </label>
-    <nav>
-      <a href="https://www.youtube.com/@manimo1/featured">Youtube channel</a>
-      <a href="about.html">About Me</a>
-      <a href="contacts.html">Contacts</a>
-    </nav>
-    <div class="most-popular-button">
-      <a href="https://www.youtube.com/watch?v=uLDHG6k-NpE">Most Popular Video</a>
-    </div>
   </div>
 
   <script>
